--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -23,7 +23,7 @@
         <div class="card bg-dark border-light w-100">
           <div class="card-body text-center d-flex flex-column">
             <h5 class="card-title">Proyecto PokeApi</h5>
-            <p class="card-text text-muted flex-grow-1">Manejo de Apis en Angular</p>
+            <p class="card-text text-muted flex-grow-1">Uso de Firebase con Angular</p>
             <a routerLink="/inicio" class="btn btn-outline-light mt-3">Ir a Proyecto 2</a>
           </div>
         </div>
