--- a/src/app/pages/acerca/acerca.component.html
+++ b/src/app/pages/acerca/acerca.component.html
@@ -3,7 +3,7 @@
     <!-- Header Section -->
     <div class="row mb-5 align-items-center">
       <div class="col-md-4 text-center mb-3 mb-md-0">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR56mncq4fVC7BZ8mwnrTmQqjzTrB8vy02a4Q&s" alt="Profile Photo" class="img-fluid rounded-circle" style="max-width: 200px;">
+        <img src="https://lh3.googleusercontent.com/a/ACg8ocJJ3gLePi4hqy8qZo25Hdmut7uu2G78qHc3NXKcfDR-MQt64cVG=s576-c-no" alt="Profile Photo" class="img-fluid rounded-circle" style="max-width: 200px;">
       </div>
       <div class="col-md-8">
         <h1 class="display-4 fw-bold">Esteban Xavier Calderón Sigala</h1>
