Cambios en el Diseño

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -13,7 +13,7 @@
       <div class="col-md-4 mb-4 d-flex">
         <div class="card bg-dark border-light w-100">
           <div class="card-body text-center d-flex flex-column">
-            <h5 class="card-title">Proyecto Libros</h5>
+            <h5 class="card-title fw-bold">Proyecto Libros</h5>
             <p class="card-text text-muted flex-grow-1">Uso de Firebase con Angular</p>
             <a routerLink="/libro" class="btn btn-outline-light mt-3">Ir a Proyecto 1</a>
           </div>
@@ -22,7 +22,7 @@
       <div class="col-md-4 mb-4 d-flex">
         <div class="card bg-dark border-light w-100">
           <div class="card-body text-center d-flex flex-column">
-            <h5 class="card-title">Proyecto PokeApi</h5>
+            <h5 class="card-title fw-bold">Proyecto Deportes</h5>
             <p class="card-text text-muted flex-grow-1">Uso de Firebase con Angular</p>
             <a routerLink="/deportes" class="btn btn-outline-light mt-3">Ir a Proyecto 2</a>
           </div>
@@ -31,7 +31,7 @@
       <div class="col-md-4 mb-4 d-flex">
         <div class="card bg-dark border-light w-100">
           <div class="card-body text-center d-flex flex-column">
-            <h5 class="card-title">Proyecto Productos</h5>
+            <h5 class="card-title fw-bold">Proyecto Productos</h5>
             <p class="card-text text-muted flex-grow-1">Uso de Firebase con Angular</p>
             <a routerLink="/producto" class="btn btn-outline-light mt-3">Ir a Proyecto 3</a>
           </div> 
